# Charles-Metronamica-Optimiser

./: .gitignore  Modules for Phoenix  README.md  commands for testing.txt
Java geoproject modification/: README.md
Java geoproject modification/Geoproject file edit/: .directory
Java geoproject modification/Geoproject file edit/ADAPT_Simpler_Randstad/: build.xml
Java geoproject modification/Geoproject file edit/ADAPT_Simpler_Randstad/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Java geoproject modification/Geoproject file edit/ADAPT_Simpler_Randstad/nbproject/private/: private.properties  private.xml
Java geoproject modification/Geoproject file edit/ADAPT_Simpler_Randstad/src/adapt/metronamica/project/file/: AdaptMetronamicaProjectFile.java  AdaptMetronamicaProjectFileSmallCaseStudy.java
Java geoproject modification/Geoproject file edit/Adapt Metronamica Project File/: build.xml
Java geoproject modification/Geoproject file edit/Adapt Metronamica Project File/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Java geoproject modification/Geoproject file edit/Adapt Metronamica Project File/nbproject/private/: private.properties  private.xml
Java geoproject modification/Geoproject file edit/Adapt Metronamica Project File/src/adapt/metronamica/project/file/: AdaptMetronamicaProjectFile.java
Java geoproject modification/Geoproject file edit/Test/: DVs.txt  Randstad_1.geoproj  RndstMod.geoproj
OptimiserV2Modules/: CMakeLists.txt  CalibrationMetricModule.cpp  CalibrationMetricModule.hpp  MadridDVsModule.cpp  MadridDVsModuleAllNeighbourhoodRules.hpp  MadridDVsModuleSeeded.cpp  MadridDVsModuleSeededv2.cpp  Pathify.cpp  Pathify.hpp
Python 2 Clumpiness/clumpiness/: CLUMPYcmd.py  read_map.py
Python 3 Clumpiness/clumpiness/: CLUMPYcmd.py  clumpiness.py  clumpy_module.py  cmd_input.txt  read_map.py
Python 3 Clumpiness/clumpiness/complex_case_study/: lu2000.asc  region.asc  regions.msk
Python 3 Clumpiness/clumpiness/simple_case_study/: basic_output.adj  lu1989.asc
Python Clumpiness/clumpiness/: CLUMPYcmd.py
Python Clumpiness/clumpiness/complex_case_study/: lu1989.asc
Python Clumpiness/clumpiness/simple_case_study/: Example.xlsx  descriptors.fcd  ex_basic.fca  lu2000.asc
c++ obj evaluator/: CMakeLists.txt  CMakeLists.txt.user.0a6e669  CMakeLists.txt.user.95923b0  EvaluatePop_LargeCaseStudy_3Obj.cpp  EvaluatePop_SmallCaseStudy_3Obj.cpp  EvaluationTester.cpp  EvaluationTester_RandstadSmallCaseStudy.cpp  EvaluationTester_SmallCaseStudy.cpp  GeoprojectManipBigCaseStudy.h  GeoprojectManipMadrid.cpp  GeoprojectManipSmallCaseStudy.h  GetFirstFront.cpp  GetFirstFront_LargeCaseStudy.cpp  GetFirstFront_SmallCaseStudy.cpp  HypervolumeCheck.cpp  MainPar.cpp  MainPar_LargCaseStudy_2Obj.cpp  MainPar_LargeCaseStudy_3Obj.cpp  MainPar_SmallCaseStudy.cpp  MainPar_SmallCaseStudy_2Obj.cpp  MainPar_SmallCaseStudy_3Obj.cpp  MainPar_SmallCase_BothMin.cpp  MainSer.cpp  MainSer.cpp.autosave  MainSer_LargeCaseStudy_2Obj.cpp  MainSer_LargeCaseStudy_3Obj.cpp  MainSer_SmallCaseStudy.cpp  MainSer_SmallCaseStudy_2Obj.cpp  MainSer_SmallCaseStudy_3Obj.cpp  MetroOF2_SmallCase_BothMin.hpp  MetronamicaCalibrationObjectiveFunction.h  MetronamicaOF.cpp  MetronamicaOF.hpp  MetronamicaOF2.hpp  MetronamicaOF2Utility.h  MetronamicaOF2_SmallCaseStudy.hpp  Pathify.hpp  TestMetroCalOF.cpp  TestMetroOFLarge.cpp  TestMetroOFSmall.cpp  (+2 more)
c++ obj evaluator/Deprecated/: EvaluationTester_RandstadLargeCaseStudy.cpp  EvaluationTester_RandstadSmallCaseStudy.cpp  GetFirstFront_LargeCaseStudy.cpp  GetFirstFront_SmallCaseStudy.cpp  MainPar_SmallCase_BothMin.cpp  MainSer.cpp  MetroOF2_SmallCase_BothMin.hpp  MetronamicaOF.hpp  MetronamicaOF2.hpp  MetronamicaOF2_RandstadLargeCaseStudy_2Obj.hpp  MetronamicaOF2_RandstadLargeCaseStudy_3Obj.hpp  MetronamicaOF2_RandstadSmallCaseStudy_2Obj.hpp  MetronamicaOF2_RandstadSmallCaseStudy_3Obj.hpp  TestMetroCalOF.cpp
c++ obj evaluator/pugixml-1.7/: website
